Add filter div to inex page

--- a/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
@@ -1,8 +1,33 @@
 @{
     ViewData["Title"] = "Home Page";
+    List<string> productCategory = new List<string> { "kampyutar", "fon", "frij", "vidiyo", "aksesoriz"};
+    List<string> suppliers = new List<string> { "Antal", "Mittal", "Sharma" };
 }
 
 @model List<Codecool.CodecoolShop.Models.Product>
+
+<div class="filter">
+    <h3>VIEW PRODUCTS BY</h3>
+    <div class="category">
+        <div class="category-body">
+            <h5 class="category-title text-left">CATEGORY</h5>
+        @foreach(var category in productCategory)
+        {
+            <p class="category-text">
+            @Html.ActionLink($"{category}", "Index")</p>
+        }
+    </div>
+    <div class="supplier">
+        <div class="supplier-body">
+            <h5 class="supplier-title text-left">SUPPLIER</h5>
+        @foreach (var supplier in suppliers)
+        {
+            <p class="supplier-text">
+            @Html.ActionLink($"{supplier}", "Index")
+            </p>
+        }
+    </div>
+</div>
 
 <div class="container">
     @foreach (var element in Model)
