--- a/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
@@ -1,23 +1,25 @@
+@model dynamic
 @{
     ViewData["Title"] = "Home Page";
-    List<string> productCategory = new List<string> { "kampyutar", "fon", "frij", "vidiyo", "aksesoriz"};
+    //List<string> productCategory = new List<string> { "kampyutar", "fon", "frij", "vidiyo", "aksesoriz"};
     List<string> suppliers = new List<string> { "Antal", "Mittal", "Sharma" };
-}
 
-@model List<Codecool.CodecoolShop.Models.Product>
+    //ProductCategory categories = 
+}
 
 <div class="filter">
     <h3>VIEW PRODUCTS BY</h3>
     <div class="category">
         <div class="category-body">
             <h5 class="category-title text-left">CATEGORY</h5>
-        @foreach(var category in productCategory)
+            <p class="category-text"><a asp-action="Index" asp-controller="Product">ALL PRODUCTS</a></p>
+        @foreach(ProductCategory category in Model.Categories)
         {
             <p class="category-text">
-                <a asp-action="Category" asp-controller="Product" asp-route-id="">@category</a>
+                <a asp-action="Category" asp-controller="Product" asp-route-id="@category.Id">@category.Name</a>
                 </p>
         }
-    </div>
+    </div></div>
     <div class="supplier">
         <div class="supplier-body">
             <h5 class="supplier-title text-left">SUPPLIER</h5>
@@ -27,11 +29,14 @@
             @Html.ActionLink($"{supplier}", "Supplier")
             </p>
         }
-    </div>
+    </div></div>
 </div>
+@{
+    var num = 1;
+}
 
 <div class="container">
-    @foreach (var element in Model)
+    @foreach (var element in Model.Products)
     {
         <div class="col-lg-3 col-lg-3" style="display: inline-block; max-width: 350px; height: 350px">
             <div class="card">
@@ -39,15 +44,16 @@
 
                 <div class="card-body">
                     <h5 class="card-title text-center">
-                        Product
-                        @{ var num = Model.IndexOf(element) + 1;}
-                        @num
+                        Product @num
+                        @{num++;}
                     </h5>
                     <h5 class="card-title">@element.Name</h5>
-                    <p class="card-text">@element.Description.</p>
-                    <p class="card-text">Category: @element.ProductCategory.Department</p>
+                    <p class="card-text">@element.Description</p>
+                    @{
+                        <p class="card-text">Category: @element.ProductCategory.Name</p>
+                    }
                     <p class="card-text">Supplier: @element.Supplier.Name</p>
-                    <p class="card-text text-center"><strong>Price: @element.DefaultPrice.ToString("C2")</strong></p>
+                    <p class="card-text text-center"><strong>Price: @element.DefaultPrice @element.Currency</strong></p>
                     <a href="" type="button" class="btn btn-primary" style="float: bottom">Add To Cart</a>
                 </div>
             </div>
