--- a/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Home Page";
     //List<string> productCategory = new List<string> { "kampyutar", "fon", "frij", "vidiyo", "aksesoriz"};
-    List<string> suppliers = new List<string> { "Antal", "Mittal", "Sharma" };
+    //List<string> suppliers = new List<string> { "Antal", "Mittal", "Sharma" };
 
     //ProductCategory categories = 
 }
@@ -23,10 +23,10 @@
     <div class="supplier">
         <div class="supplier-body">
             <h5 class="supplier-title text-left">SUPPLIER</h5>
-        @foreach (var supplier in suppliers)
+        @foreach (var supplier in Model.Suppliers)
         {
             <p class="supplier-text">
-            @Html.ActionLink($"{supplier}", "Supplier")
+                    <a asp-action="Supplier" asp-controller="Product" asp-route-id="@supplier.Id">@supplier.Name</a>
             </p>
         }
     </div></div>
