--- a/src/Codecool.CodecoolShop/Views/Product/Supplier.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Product/Supplier.cshtml
@@ -1,5 +1,62 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model dynamic
 @{
+    ViewData["Title"] = "Home Page";
 }
+
+<div class="filter">
+    <h3>VIEW PRODUCTS BY</h3>
+    <div class="category">
+        <div class="category-body">
+            <h5 class="category-title text-left">CATEGORY</h5>
+            <p class="category-text"><a asp-action="Index" asp-controller="Product">ALL PRODUCTS</a></p>
+            @foreach (ProductCategory category in Model.Categories)
+            {
+                <p class="category-text">
+                    <a asp-action="Category" asp-controller="Product" asp-route-id="@category.Id">@category.Name</a>
+                </p>
+            }
+        </div>
+    </div>
+    <div class="supplier">
+        <div class="supplier-body">
+            <h5 class="supplier-title text-left">SUPPLIER</h5>
+            @foreach (var supplier in Model.Suppliers)
+            {
+                <p class="supplier-text">
+                    <a asp-action="Supplier" asp-controller="Product" asp-route-id="@supplier.Id">@supplier.Name</a>
+                </p>
+            }
+        </div>
+    </div>
+</div>
+@{
+    var num = 1;
+}
+
+<div class="container">
+    @foreach (var element in Model.Products)
+    {
+        <div class="col-lg-3 col-lg-3" style="display: inline-block; max-width: 350px; height: 350px">
+            <div class="card">
+                <img src="img/@(element.Name).jpg" style="height: 50%; width: 50%; align-self: center; padding-top: 10px">
+
+                <div class="card-body">
+                    <h5 class="card-title text-center">
+                        Product @num
+                        @{
+                            num++;
+                        }
+                    </h5>
+                    <h5 class="card-title">@element.Name</h5>
+                    <p class="card-text">@element.Description</p>
+                    @{
+                        <p class="card-text">Category: @element.ProductCategory.Name</p>
+                    }
+                    <p class="card-text">Supplier: @element.Supplier.Name</p>
+                    <p class="card-text text-center"><strong>Price: @element.DefaultPrice @element.Currency</strong></p>
+                    <a href="" type="button" class="btn btn-primary" style="float: bottom">Add To Cart</a>
+                </div>
+            </div>
+        </div>
+    }
+</div>
