--- a/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
@@ -36,7 +36,7 @@
     {
         <div class="col-lg-3 col-lg-3" style="display: inline-block; max-width: 350px; height: 350px">
             <div class="card">
-                <img src="img/@(element.Name).jpg" style="height: 50%; width: 50%; align-self: center; padding-top: 10px">
+                <img src="@element.ImagePath" style="height: 50%; width: 50%; align-self: center; padding-top: 10px"><!--change src attr to src="img/at(element.Name).jpg"-->
 
                 <div class="card-body">
                     <h5 class="card-title text-center">
