--- a/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Privacy"><i class="fa fa-shopping-cart" style="font-size:20px"></i></a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action=""><i class="fa fa-shopping-cart" style="font-size:20px"></i><sup>licznik</sup></a>
                         </li>
                     </ul>
                 </div>
