--- a/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
@@ -56,7 +56,7 @@
                     }
                     <p class="card-text">Supplier: @element.Supplier.Name</p>
                     <p class="card-text text-center"><strong>Price: @element.DefaultPrice @element.Currency</strong></p>
-                    <a asp-action="" asp-controller="" asp-route-id="" type="button" class="btn btn-primary" style="float: bottom">Add To Cart</a>
+                    <a asp-action="AddToCart" asp-controller="Product" asp-route-name="@element.Name" asp-route-price="@element.DefaultPrice" type="button" class="btn btn-primary" style="float: bottom">Add To Cart</a>
                 </div>
             </div>
         </div>
