--- a/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
@@ -2,7 +2,6 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-
 <div class="container">
     <h4>VIEW PRODUCTS BY</h4>
     <div class="filter-headers">
@@ -56,7 +55,7 @@
                     }
                     <p class="card-text">Supplier: @element.Supplier.Name</p>
                     <p class="card-text text-center"><strong>Price: @element.DefaultPrice @element.Currency</strong></p>
-                    <a asp-action="AddToCart" asp-controller="Product" asp-route-name="@element.Name" asp-route-price="@element.DefaultPrice" type="button" class="btn btn-primary" style="float: bottom">Add To Cart</a>
+                    <a asp-action="AddedToCart" asp-controller="Product" asp-route-name="@element.Name" asp-route-price="@element.DefaultPrice" type="button" class="btn btn-primary" style="float: bottom">Add To Cart</a>
                 </div>
             </div>
         </div>
