--- a/src/Codecool.CodecoolShop/Views/Cart/Cart.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Cart/Cart.cshtml
@@ -26,7 +26,7 @@ else
         @foreach (var lineItem in Model.Items)
     {
         <tr>
-            <td>@counter/@lineItem.Id</td>
+            <td>@counter.</td>
             <td>@lineItem.Name</td>
             <td>@lineItem.Price</td>
                     <td><input type="text" name="quantity" value="@lineItem.Quantity" asp-action="Quantity" asp-controller="Cart" asp-route-id="@lineItem.Id"><input type="submit" value="Set quantity" /></td>
