Change number of items | remove when 0

--- a/src/Codecool.CodecoolShop/Views/Cart/Cart.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Cart/Cart.cshtml
@@ -10,41 +10,49 @@
 }
 else
 {
-<h4>Order no. @Model.Id</h4> 
-    <form name="ShoppingCart">
-
-<table>
-    <tr>
-        <th>No.</th>
-        <th>Product</th>
-        <th>Price per product</th>
-        <th>Quantity</th>
-        <th>Price</th>
-    </tr>
-            @{
-                int counter = 1;
-                string currency = "";
-            }
-        @foreach (var lineItem in Model.Items)
-    {
+<h4>Order no. @Model.Id</h4>
+<form action="Quantity" method="post">
+    <table>
         <tr>
-            <td>@counter.</td>
-            <td>@lineItem.Name</td>
-            <td>@lineItem.Price @lineItem.Currency</td>
-                    <td><input type="text" name="quantity" value="@lineItem.Quantity"></td>
-                @{
-                    decimal totalprice = lineItem.Quantity * lineItem.Price;
-                    counter++;
-                    currency = @lineItem.Currency;
-                }
-                    <td>@totalprice @lineItem.Currency</td>
+            <th>No.</th>
+            <th>Product</th>
+            <th>Price per product</th>
+            <th>Quantity</th>
+            <th>Price</th>
         </tr>
-    }   
-    <tr>
-        <td colspan="4"><strong>Total price: </strong></td>
-            <td>@Model.Sum @currency</td>
-    </tr>
-</table>
-    }
+                @{
+                    int counter = 1;
+                    string currency = "";
+                }
+            @foreach (var lineItem in Model.Items)
+        {
+            <tr>
+                <td>@counter.</td>
+                <td>@lineItem.Name</td>
+                <td>@lineItem.Price @lineItem.Currency</td>
+            
+                <td>
+                    <input type="hidden" name="id" value="@lineItem.Id">
+                    <input type="text" name="quantity" value="@lineItem.Quantity">
+                    <input type="submit" value="Update">
+                            </td>
+                        @{
+                            string quantity = (@lineItem.Quantity).ToString(); 
+                        }
+                                       <!-- <td>@Html.TextBox("Quantity", quantity, new { 
+                            @Id = @lineItem.Id, @Value = @lineItem.Quantity })</td> -->
+                    @{
+                        decimal totalprice = lineItem.Quantity * lineItem.Price;
+                        counter++;
+                        currency = @lineItem.Currency;
+                    }
+                        <td>@totalprice @lineItem.Currency</td>
+            </tr>
+        }   
+        <tr>
+            <td colspan="4"><strong>Total price: </strong></td>
+                <td>@Model.Sum @currency</td>
+        </tr>
+    </table>
 </form>
-}
+       }
