--- a/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-@model dynamic
+@model List<Codecool.CodecoolShop.Models.Product>
 @{
     ViewData["Title"] = "Home Page";
 }
@@ -13,7 +13,7 @@
     <div class="filter" style="position: relative; display: flex; margin: auto">
         <div class="col-lg-6">
             <div class="col-lg-auto"><a asp-action="Index" asp-controller="Product">ALL</a></div>
-            @foreach (ProductCategory category in Model.Categories)
+            @foreach (var category in ViewBag.categories)
             {
                 <div class="col-lg-auto">
                     <a asp-action="Category" asp-controller="Product" asp-route-id="@category.Id">@category.Name</a>
@@ -21,7 +21,7 @@
             }
         </div>
         <div class="col-lg-6">
-            @foreach (var supplier in Model.Suppliers)
+            @foreach (var supplier in ViewBag.suppliers)
             {
                 <div class="col-lg-auto">
                     <a asp-action="Supplier" asp-controller="Product" asp-route-id="@supplier.Id">@supplier.Name</a>
@@ -35,11 +35,11 @@
 }
 
 <div class="container">
-    @foreach (var element in Model.Products)
+    @foreach (var element in Model)
     {
-        <div class="col-lg-3 col-lg-3" style="display: inline-block; max-width: 350px; height: 350px">
+        <div class="col-lg-3 col-lg-3" style="display: inline-block; max-width: 350px; height: 500px">
             <div class="card">
-                <img src="img/@(element.Name).jpg" style="height: 50%; width: 50%; align-self: center; padding-top: 10px">
+                <img src="img/@(element.Id).jpg" style="height: 50%; width: 50%; align-self: center; padding-top: 10px">
 
                 <div class="card-body">
                     <h5 class="card-title text-center">
