--- a/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
@@ -3,56 +3,99 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Codecool.CodecoolShop</title>
+    <title>@ViewData["Title"]</title>
+    @*<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />*@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor httpContextAccessor
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3 fixed-top bg-dark">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Product" asp-action="Index">Codecool.CodecoolShop</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Product" asp-action="Index"><span style="font-weight: bold;" class="text-warning" data-path="@Context.Request.Path" id="cShop">CodecoolShop</span></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="navbar-collapse collapse">
+                    <ul class="flex-row flex-wrap navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
+                            @if ((Context.Request.Path == "/"))
+                            {
+                                <li class="dropdown show">
+                                <a class="dropdown-toggle" style="text-decoration: none; color: white;" role="button" id="dropdownMenuCategoriesTitle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Categories
+                                </a>
 
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Cart" asp-route-id="@ViewData["OrderId"]">
-                                <i class="fa fa-shopping-cart" style="font-size:20px"></i>@if (ViewBag.count == null)
-                                {
-                                    <h4>@ViewBag.price</h4>
-                                } else {<sup>@ViewBag.count</sup>}
-                            </a>
+                                <div id="dropdownMenuCategories" class="dropdown-menu" aria-labelledby="dropdownMenuCategoriesTitle">
+
+                                </div>
+                                </li>
+
+                                <li class="dropdown show">
+                                    <a class="dropdown-toggle" style="text-decoration: none; color: white;" role="button" id="dropdownMenuSuppliersTitle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Suppliers
+                                    </a>
+
+                                    <div id="dropdownMenuSuppliers" class="dropdown-menu" aria-labelledby="dropdownMenuSuppliersTitle"></div>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Order"><span style="color: white;">Orders History</span></a>
+                                </li>
+                             }
+               @*         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Register"><span style="color: white;">Register</span></a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Login"><span style="color: white;">Login</span></a>
+                        </li>*@
+             
+                    </ul>
+                    <ul class="flex-row flex-wrap ms-auto navbar-nav">
+                        <partial name="_LoginPartial" />
+                        @if ((Context.Request.Path == "/"))
+                        {
+                            <li class="nav-item">
+                                <a class="btn nav-link" id="cartBtn" data-bs-toggle="offcanvas" href="#offcanvasCart" role="button" aria-controls="offcanvasCart">
+                                    <i class="bi bi-cart" style="color: white;"></i>
+                                    <span style="color: white; cursor: pointer;">My Cart <span class="badge bg-warning" id="cart-quantity">0</span></span>
+                                </a>
+
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+
+
+    <main role="main" class="pb-3 mt-5 pt-3">
+        @RenderBody()
+    </main>
+
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasCart" aria-labelledby="offcanvasCartLabel" data-bs-backdrop="true">
+        <div class="offcanvas-header bg-dark text-light">
+            <h5 class="offcanvas-title" id="offcanvasCartLabel">Shopping Cart</h5>
+            <i id="cart-clear" class="bi bi-cart-x text-danger" style="font-size: 30px; cursor: pointer;"></i>
+        </div>
+        <div class="offcanvas-body" id="cart-container" style="position: relative;">
+
+        </div>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - Codecool.CodecoolShop by <em>STeam Group</em> - <a asp-area="" asp-controller="Product" asp-action="Privacy">Privacy</a>
+    <footer class="border-top footer text-muted bg-dark">
+        <div class="container" style="color: white;">
+            &copy; @DateTime.Now.Year - <span class="text-warning">CodecoolShop</span>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
