Add checkout feature

--- a/src/Codecool.CodecoolShop/Views/Cart/Cart.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Cart/Cart.cshtml
@@ -42,5 +42,6 @@ else
             </tr>
         </table>
         <button asp-controller="Cart" asp-action="Checkout">Checkout</button>
+        <button asp-controller="Cart" asp-action="Payment">Go to payment</button>
     </form>
 }
