--- a/src/Codecool.CodecoolShop/Views/Cart/Payment.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Cart/Payment.cshtml
@@ -1,1 +1,42 @@
-﻿
+﻿@model Order
+<h3>Your shopping list</h3>
+<table>
+    <tr><th>No.</th><th>Product</th>
+        <th>Quantity</th>
+        <th>Total price</th></tr>
+    @{
+        int counter = 1;
+    }
+    @foreach (var item in Model.Items)
+    {
+        <tr>
+            <td>@counter.</td>
+            <td>@item.Name</td>
+            <td>@item.Quantity @item.Currency</td>
+            <td>@item.CountPrice()</td>
+        </tr>
+        counter++;
+    }
+    <tr><td colspan="3"><strong>Order price:</strong></td><td>@Model.CountSum()</td></tr>
+</table>
+
+
+<form asp-controller="Cart" asp-action="Pay" method="post">
+    <h3>Payment</h3>
+    <label for="fname">Accepted Cards</label>
+    <div class="icon-container">
+        <i class="fa fa-cc-visa" style="color:navy;"></i>
+        <i class="fa fa-cc-mastercard" style="color:red;"></i>
+    </div>
+    <label for="cname">Name on Card</label>
+    <input type="text" id="cname" name="Name" placeholder="Full name">
+    <label for="ccnum">Credit card number</label>
+    <input type="text" id="ccnum" name="CardNumber" placeholder="XXXX-XXXX-XXXX-XXXX">
+    <label for="expmonth">Exp. Month</label>
+    <input type="number" min="1" max="12" id="expmonth" name="ExpMonth" placeholder="XX">
+    <label for="expyear">Exp. Year</label>
+    <input type="number" min="2023" max="2050" id="expyear" name="ExpYear" placeholder="XXXX">
+    <label for="cvv">CVV</label>
+    <input type="text" id="cvv" name="CVV" placeholder="XXX">
+    <input type="submit" value="Continue">
+</form>
