Change currency variable placement

--- a/src/Codecool.CodecoolShop/Views/Cart/Payment.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Cart/Payment.cshtml
@@ -12,8 +12,8 @@
         <tr>
             <td>@counter.</td>
             <td>@item.Name</td>
-            <td>@item.Quantity @item.Currency</td>
-            <td>@item.CountPrice()</td>
+            <td>@item.Quantity</td>
+            <td>@item.CountPrice() @item.Currency</td>
         </tr>
         counter++;
     }
