--- a/src/Codecool.CodecoolShop/Views/Cart/Payment.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Cart/Payment.cshtml
@@ -9,15 +9,15 @@
     }
     @foreach (var item in Model.Items)
     {
-        <tr>
+        <tr class="border">
             <td>@counter.</td>
             <td>@item.Name</td>
-            <td>@item.Quantity @item.Currency</td>
-            <td>@item.CountPrice()</td>
+            <td>@item.Quantity</td>
+            <td>@item.CountPrice() @item.Currency</td>
         </tr>
         counter++;
     }
-    <tr><td colspan="3"><strong>Order price:</strong></td><td>@Model.CountSum()</td></tr>
+    <tr class="border"><td colspan="3"><strong>Order price:</strong></td><td>@Model.CountSum() </td></tr>
 </table>
 
 
@@ -28,15 +28,36 @@
         <i class="fa fa-cc-visa" style="color:navy;"></i>
         <i class="fa fa-cc-mastercard" style="color:red;"></i>
     </div>
-    <label for="cname">Name on Card</label>
-    <input type="text" id="cname" name="Name" placeholder="Full name">
-    <label for="ccnum">Credit card number</label>
-    <input type="text" id="ccnum" name="CardNumber" placeholder="XXXX-XXXX-XXXX-XXXX">
-    <label for="expmonth">Exp. Month</label>
-    <input type="number" min="1" max="12" id="expmonth" name="ExpMonth" placeholder="XX">
-    <label for="expyear">Exp. Year</label>
-    <input type="number" min="2023" max="2050" id="expyear" name="ExpYear" placeholder="XXXX">
-    <label for="cvv">CVV</label>
-    <input type="text" id="cvv" name="CVV" placeholder="XXX">
-    <input type="submit" value="Continue">
+    <div class="row">
+        <div class="col-6">
+    <p><label for="cname">Name on Card</label>
+    </p>
+    <p>
+        <input type="text" id="cname" name="Name" placeholder="Full name">
+    </p>
+    <p>
+        <label for="ccnum">Credit card number</label>
+    </p><p>
+        <input type="text" id="ccnum" name="CardNumber" placeholder="XXXX-XXXX-XXXX-XXXX">
+    </p>
+        </div>
+        <div class="col-6">
+    <p>
+        <label for="expmonth">Exp. Month</label>
+    </p><p>
+        <input type="number" min="1" max="12" id="expmonth" name="ExpMonth" placeholder="XX">
+    </p>
+    <p>
+        <label for="expyear">Exp. Year</label>
+    </p><p>
+        <input type="number" min="2023" max="2050" id="expyear" name="ExpYear" placeholder="XXXX">
+    </p>
+        <label for="cvv">CVV</label>
+    </p><p>
+        <input type="text" id="cvv" name="CVV" placeholder="XXX">
+    <p>
+        <input type="submit" value="Continue">
+    </p>
+    </div>
+    </div>
 </form>
