--- a/src/Codecool.CodecoolShop/Views/Cart/Payment.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Cart/Payment.cshtml
@@ -17,7 +17,7 @@
         </tr>
         counter++;
     }
-    <tr class="border"><td colspan="3"><strong>Order price:</strong></td><td>@Model.CountSum() </td></tr>
+    <tr class="border"><td colspan="3"><strong>Order price:</strong></td><td>@Model.CountSum() EUR</td></tr>
 </table>
 
 
